# JobsWizard

./: JobsWizard.ipynb  README.md  cleaned_app.py  linearized_app.py  old_app_backup.py  pyproject.toml  streamlit_customizations.css
.streamlit/: config.toml
