[tool.poetry]
name = "JobsWizard"
version = "0.1.0"
description = "A job listings advanced searcher"
authors = ["OnyxianSoul"]
license = "BSD0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-tags = "^1.2.8"
streamlit = "^1.31.0"
ipykernel = "^6.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
